# mkdocs-template

./: .gitignore  Makefile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
content/: about.md  index.md
