[project]
name = "mkdocs-template"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "mkdocs>=1.5.3,<2",
    "mkdocs-material>=9.5.9,<10",
    "mkdocs-puml>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
